# SENTINEL-LDK_samples_for_CMake

./: .gitignore  README.md  README.tr.md
API/Admin/C/: sntl_adminapi.h
API/Admin/DotNetStandard/: sntl_adminapi_net_standard.2.0.5.nupkg
API/Licgen/C/x86_64/: sntl_licgen.h
API/Licgen/XSD/: Sentinel_Cross_Locking.xsd  Sentinel_HL.xsd  Sentinel_Provisional.xsd  Sentinel_SL_AdminMode.xsd  Sentinel_SL_UserMode.xsd
API/Runtime/Cpp/: hasp_api_cpp_.h  haspbase.cpp  haspdiag.cpp  haspdiag.h  haspenc64.cpp  haspfeature.cpp  haspfile.cpp  hasphandle.cpp  hasphasp.cpp  haspimpl.cpp  haspinfo.cpp  hasplegacy.cpp  hasplock.cpp  haspmain.cpp  haspmap.cpp  hasptime.cpp  haspversion.cpp
API/Runtime/Cpp/x86_64/: Makefile
API/Runtime/DotNetCore/: Licensing_API_Net_Reference_English.html
API/Runtime/DotNetCore/Licensing_API_Net_HTML_English/: Default.htm  Default.js  Default.mcwebhelp  Default_CSH.htm  EULA2.htm  Search.htm  Support_contacts_info.htm  csh.js
API/Runtime/Java/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
API/Runtime/Java/source/: HASPJava.c  build_linux_arm64.sh  build_linux_armhf.sh  build_linux_x64.sh
Samples/Activation/Java/: activation.properties  build_sample.sh  readme.html  run_sample.sh
Samples/Activation/Java/classes/: log4j2.properties
Samples/Activation/Java/src/: Activation.java  ActivationSample.java  Customer.java
Samples/Admin/C/: hasp_vcode.h  readme.html  sntl_adminapi_demo.c
Samples/Envelope/Java/: readme.html
Samples/Envelope/Python/: readme.html
Samples/Envelope/Python/cythonize_and_envelope/: build_python2.sh  build_python3.sh
Samples/Licgen/C/: readme.html  sample.c  sntl_licgen.h
Samples/Licgen/C-CMake/: CMakeLists.txt
Samples/Licgen/C-CMake/src/: sntl_vcode.h
Samples/Runtime/C/: hasp_demo.c  readme.html
Samples/Runtime/C-CMake/: CMakeLists.txt
Samples/Runtime/C-CMake/src/: hasp_api.h  hasp_update.c  hasp_vcode.h
Samples/Runtime/Cpp/: errorprinter.h  hasp_api_cpp.h  readme.html
Samples/Runtime/Cpp-CMake/: CMakeLists.txt
Samples/Runtime/Cpp-CMake/src/: errorprinter.cpp  hasp_api.h  hasp_demo.cpp  hasp_update.cpp  vendor_code.h
Samples/Runtime/Cpp/x86_64/: Makefile  (+2 more)
Samples/Runtime/Java/: build_samples.sh  hasp_demo.java  hasp_update.java  readme.html
(+279 files in other folders)
